tests/pass/array_basic.kl
fn inisiu() {
    nter[3] nums;
    nums[0] = 7;
    nums[1] = 5;
    nums[2] = nums[0] + nums[1];
    mostra(nums[2]);
}
