tests/fail/fail_array_init_size_mismatch.kl
fn inisiu() {
    nter[2] array = [1];
}
